--- a/blog1.html
+++ b/blog1.html
@@ -577,12 +577,11 @@
     display: table;
     position: relative;
     overflow: hidden;
-    width: 100%;
+    width: auto;
 }
-.ed-rsear-in ul{}
 .ed-rsear-in ul li{
-    float: left;
-    width: 10%;
+    float: auto;
+    width: 33%;
     box-sizing: border-box;
     padding: 10px;
 }
@@ -683,10 +682,22 @@ padding: 6px 0px;
 	float:left;
 	width:20%;
 }
+.con-title h2{
+     font-size: 36px;
+     font-family: sans-serif;
+     margin-top: 0px;
+     margin-bottom: 15px;
+     line-height: 40px;
+     color: #fff;
+     text-shadow: 2px 0px 0px #000;
+}
             </style>
             <div class="ed-res-bg">
             <div class="container com-sp pad-bot-70">
                 <div class="row">
+                        <div class="con-title">
+                            <h2>NEWS &amp; EVENTS</h2>
+                        </div>
                     <div class="cor about-sp">
                         <div class="ed-rsear">
                             <div class="ed-rsear-in">
