--- a/blog1.html
+++ b/blog1.html
@@ -543,6 +543,7 @@
                     <p></p>
             </div>
         </div>
+        <head>
         <!-- Tailwind CSS -->
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
@@ -601,6 +602,7 @@
     </div>
   </div>
 </div>
+</body>
     
         <!-- Footer -->
         <footer>
