--- a/blog1.html
+++ b/blog1.html
@@ -556,7 +556,7 @@
   <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
     <!--Card 1-->
     <div class="rounded overflow-hidden shadow-lg">
-      <img class="w-full" src="img/dlsobucrest.png" alt="">
+      <img class="w-full" src="News and Events/welcoming rev bro jayakanthan.jpg" alt="">
       <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">Mountain</div>
         <p class="text-gray-700 text-base">
@@ -571,7 +571,7 @@
     </div>
     <!--Card 2-->
     <div class="rounded overflow-hidden shadow-lg">
-      <img class="w-full" src="img/dlsobucrest.png" alt="">
+      <img class="w-full" src="News and Events/photo_2021-11-16_01-10-22dlsc.jpg" alt="">
       <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">River</div>
         <p class="text-gray-700 text-base">
@@ -587,7 +587,7 @@
 
     <!--Card 3-->
     <div class="rounded overflow-hidden shadow-lg">
-      <img class="w-full" src="img/dlsobucrest.png" alt="">
+      <img class="w-full" src="img/dlsd.jpg" alt="">
       <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">Forest</div>
         <p class="text-gray-700 text-base">
