--- a/blog1.html
+++ b/blog1.html
@@ -686,7 +686,17 @@
 	transition: .5s;
 }
         </style>
-        <div class="news-wrap">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type"content="text/html; charset=utf-8"/>
+		<meta name="viewport"content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+		<title>News Card</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+	</head>
+	<body>
+		<div class="news-wrap">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-4">
@@ -749,7 +759,8 @@
 							</div>
 						</div>
 					</div>
-    
+				</body>
+			</html>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
