--- a/blog1.html
+++ b/blog1.html
@@ -701,7 +701,7 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<div class="news-grid">
-							<div class="news-grid-image"><img src="images/1.jpg" alt="">
+							<div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
 								<div class="news-grid-box">
 									<h1>19</h1>
 									<p>Sep</p>
@@ -720,7 +720,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="news-grid">
-								<div class="news-grid-image"><img src="images/2.jpg" alt="">
+								<div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
 									<div class="news-grid-box">
 										<h1>20</h1>
 										<p>Sep</p>
@@ -739,7 +739,7 @@
 							</div>
 							<div class="col-lg-4">
 								<div class="news-grid">
-									<div class="news-grid-image"><img src="images/3.jpg" alt="">
+									<div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
 										<div class="news-grid-box">
 											<h1>24</h1>
 											<p>Sep</p>
