--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
         <div class="news-wrap">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-4">
+                            <div class="col-md-5 col-lg-4 m-15px-tb">
                                 <div class="news-grid">
                                     <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
                                         <div class="news-grid-box">
@@ -870,7 +870,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-md-5 col-lg-4 m-15px-tb">
                                     <div class="news-grid">
                                         <div class="news-grid-image"><img src="img/dlsd.jpg" alt="">
                                             <div class="news-grid-box">
@@ -889,7 +889,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-md-5 col-lg-4 m-15px-tb">
                                         <div class="news-grid">
                                             <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
                                                 <div class="news-grid-box">
