--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
         </div>
     </div>
 
- <!--RECENT NEWS % EVENTS OF DLS-->
+ <!--RECENT NEWS AND EVENTS OF DLS-->
     <section>
         <style>
         
