--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
             display: block;
             position: absolute;
             text-align: center;
-            background: #1a076e;
+            background: #0A0B3B;
             left: -80px;
             top: 15px;
             padding: 10px;
@@ -764,7 +764,7 @@
         }
         
         .news-grid-txt span {
-            color: #09106b;
+            color: #0A0B3B;
             font-size: 13px;
             font-weight: 500;
             letter-spacing: 4px;
@@ -814,7 +814,7 @@
         
         .news-grid-txt a {
             color: #fff;
-            background: #040675;
+            background: #0A0B3B;
             padding: 8px 20px;
             border-radius: 50px;
             font-size: 14px;
