--- a/index.html
+++ b/index.html
@@ -851,20 +851,20 @@
                         <div class="row">
                             <div class="col-md-4 col-lg-4 m-15px-tb">
                                 <div class="news-grid">
-                                    <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
+                                    <div class="news-grid-image"><img src="News and Events/Main-Thumbs.jpg" alt="">
                                         <div class="news-grid-box">
                                             <h1>19</h1>
                                             <p>Sep</p>
                                         </div></div>
                                         <div class="news-grid-txt">
                                             <span>Finacne</span>
-                                            <h2>Heading Will Be Here</h2>
+                                            <h2>The Kingdom by the sea turns 115th years</h2>
                                             <ul>
-                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 19, 2020</li>
+                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
                                                 <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                             </ul>
                                             <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-                                            <a href="#">Read More...</a>
+                                            <a href="https://www.facebook.com/DeLaSalleCollegeColombo/">Read More...</a>
                                         </div>
                                     </div>
                                 </div>
