--- a/index.html
+++ b/index.html
@@ -857,13 +857,13 @@
                                             <p>May</p>
                                         </div></div>
                                         <div class="news-grid-txt">
-                                            <span>Finacne</span>
+                                            <span></span>
                                             <h2>The Kingdom by the sea turns 115th years</h2>
                                             <ul>
                                                 <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
                                                 <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                             </ul>
-                                            <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+                                            <p>Today marks 116 years since De La Salle College, Colombo, was founded on February 1, 1095.</p>
                                             <a href="https://www.facebook.com/DeLaSalleCollegeColombo/">Read More...</a>
                                         </div>
                                     </div>
