--- a/index.html
+++ b/index.html
@@ -877,12 +877,12 @@
                                             </div></div>
                                             <div class="news-grid-txt">
                                                 <span>Finacne</span>
-                                                <h2>Heading Will Be Here</h2>
+                                                <h2>OUR NEW COLLEGE WEBSITE HAS BEEN LAUNCHED</h2>
                                                 <ul>
-                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 20, 2020</li>
+                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                 </ul>
-                                                <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+                                                <p>The launch of our redesigned website is because we are so excited about the official launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
                                                 <a href="#">Read More...</a>
                                             </div>
                                         </div>
