--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                                             <p>May</p>
                                         </div></div>
                                         <div class="news-grid-txt">
-                                            <span></span>
+                                            <span>EVENTS</span>
                                             <h2>The Kingdom by the sea turns 115th years</h2>
                                             <ul>
                                                 <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
@@ -876,7 +876,7 @@
                                                 <p>Sep</p>
                                             </div></div>
                                             <div class="news-grid-txt">
-                                                <span>Finacne</span>
+                                                <span>BLOG</span>
                                                 <h2>OUR NEW COLLEGE WEBSITE HAS BEEN LAUNCHED</h2>
                                                 <ul>
                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
