--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                                             </div></div>
                                             <div class="news-grid-txt">
                                                 <span>BLOG</span>
-                                                <h2>OUR NEW COLLEGE WEBSITE HAS BEEN LAUNCHED</h2>
+                                                <h2>Our New College Website Has Been Launched</h2>
                                                 <ul>
                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
