--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                 </ul>
-                                                <p>The launch of our redesigned website is because we are so excited about the official launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
+                                                <p>we are so excited announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
                                                 <a href="#">Read More...</a>
                                             </div>
                                         </div>
