--- a/blog.html
+++ b/blog.html
@@ -247,7 +247,7 @@
                                                 <label>JAN,2020</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://scontent.fcmb3-2.fna.fbcdn.net/v/t1.6435-9/83871479_2851315558259147_2765094507736203264_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=973b4a&_nc_ohc=uf_bEfMKyD0AX88dsuE&_nc_ht=scontent.fcmb3-2.fna&oh=3ad963b15c093091b0e1c567c112dce9&oe=61941C6C" title="" alt="">
+                                                <img src="News and Events/Main-Thumbsmod.jpg" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
