--- a/blog.html
+++ b/blog.html
@@ -175,6 +175,29 @@
                                         <div class="blog-img">
                                             <div class="date">
                                                 <span>11</span>
+                                                <label>DEC</label>
+                                            </div>
+                                            <a href="#">
+                                                <img src="mockups/mockupitemd.jpg" title="" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="blog-info">
+                                            <h5><a href="#">Dear Old Boys & Well Wishers of De La Salle College,</a></h5>
+                                            <p>It is a well known fact that Rev Br Joseph Jayakanthan who was waiting for all of us, took over duties as the Principal of the school on October 06th, 2021.</p>
+                                            <div class="btn-bar">
+                                                <a href="#" class="px-btn-arrow">
+                                                    <span>Read More</span>
+                                                    <i class="arrow"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="blog-grid">
+                                        <div class="blog-img">
+                                            <div class="date">
+                                                <span>11</span>
                                                 <label>Nov</label>
                                             </div>
                                             <a href="https://www.facebook.com/pg/DeLaSalleCollegeColombo/posts/">
