--- a/blog.html
+++ b/blog.html
@@ -182,8 +182,8 @@
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Dear Old Boys & Well Wishers of De La Salle College,</a></h5>
-                                            <p>It is a well known fact that Rev Br Joseph Jayakanthan who was waiting for all of us, took over duties as the Principal of the school on October 06th, 2021.</p>
+                                            <h5><a href="#">Our New College Website Has Been Launched</a></h5>
+                                            <p>we are so excited announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
                                                     <span>Read More</span>
