--- a/blog.html
+++ b/blog.html
@@ -359,6 +359,8 @@
                     </div>
                 </div>
         </section>
+    </div>
+</body>
      <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
