--- a/blog.html
+++ b/blog.html
@@ -274,7 +274,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">The Kingdom by the sia turns 115th yeas</a></h5>
+                                            <h5><a href="#">The Kingdom by the sea turns 115th yeas</a></h5>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
