--- a/blog.html
+++ b/blog.html
@@ -243,6 +243,29 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
+                                                <span>31</span>
+                                                <label>JAN,2020</label>
+                                            </div>
+                                            <a href="#">
+                                                <img src="News and Events/Main-Thumbsmod.jpg" title="" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="blog-info">
+                                            <h5><a href="#">The Kingdom by the sea turns 116th years</a></h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <div class="btn-bar">
+                                                <a href="#" class="px-btn-arrow">
+                                                    <span>Read More</span>
+                                                    <i class="arrow"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="blog-grid">
+                                        <div class="blog-img">
+                                            <div class="date">
                                                 <span>15</span>
                                                 <label>MAY,2020</label>
                                             </div>
@@ -262,7 +285,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
+                                <!--div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
@@ -274,7 +297,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">The Kingdom by the sea turns 115th yeas</a></h5>
+                                            <h5><a href="#">The Kingdom by the sea turns 116th years</a></h5>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
@@ -284,7 +307,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div-->
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
