--- a/blog.html
+++ b/blog.html
@@ -308,6 +308,12 @@
                                         </div>
                                     </div>
                                 </div-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </div>
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
