--- a/blog.html
+++ b/blog.html
@@ -193,6 +193,12 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </div>
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
@@ -216,6 +222,12 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </div>
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
@@ -239,6 +251,12 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </div>
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
@@ -262,6 +280,12 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </div>
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
@@ -285,6 +309,12 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </div>
                                 <!--div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
