--- a/blog.html
+++ b/blog.html
@@ -165,7 +165,7 @@
         <!-- /header -->
         
         <!-- Content wrapper -->
-        <section class="blog-listing gray-bg">
+        <section>
                 <div class="container">
                     <div class="row align-items-start">
                         <div class="col-lg-8 m-15px-tb">
