--- a/blog.html
+++ b/blog.html
@@ -163,8 +163,10 @@
             </nav>
         </header>
         <!-- /header -->
-        
-        <!-- Content wrapper -->
+    <!-- Content wrapper -->
+    <div class="contents-wrapper">
+        <!-- Contents starts here -->
+        <div class="content">
         <section>
                 <div class="container">
                     <div class="row align-items-start">
