--- a/blog.html
+++ b/blog.html
@@ -380,6 +380,7 @@
                                         </div>
                                     </div>
                                 </div>
+                        </div>
         </section>
      <!-- Footer -->
         <footer>
