--- a/blog.html
+++ b/blog.html
@@ -381,6 +381,8 @@
                                     </div>
                                 </div>
                         </div>
+                    </div>
+                </div>
         </section>
      <!-- Footer -->
         <footer>
