--- a/blog.html
+++ b/blog.html
@@ -163,11 +163,9 @@
             </nav>
         </header>
         <!-- /header -->
-    <!-- Content wrapper -->
-    <div class="contents-wrapper">
-        <!-- Contents starts here -->
-        <div class="content">
-        <section>
+        
+        <!-- Content wrapper -->
+        <section class="blog-listing gray-bg">
                 <div class="container">
                     <div class="row align-items-start">
                         <div class="col-lg-8 m-15px-tb">
@@ -310,7 +308,6 @@
                                         </div>
                                     </div>
                                 </div-->
-                            </div>
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
@@ -380,10 +377,13 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
         </section>
+    </div>
+</body>
      <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
