--- a/blog.html
+++ b/blog.html
@@ -165,7 +165,7 @@
         <!-- /header -->
         
         <!-- Content wrapper -->
-        <section class="blog-listing gray-bg">
+        <section class="blog-listing">
                 <div class="container">
                     <div class="row align-items-start">
                         <div class="col-lg-8 m-15px-tb">
@@ -383,7 +383,6 @@
                 </div>
         </section>
     </div>
-</body>
      <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
