--- a/Blogs/Our-New-College Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College Website-Has-Been-Launched.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>De La Salle College Colombo 15 | Our New College Website Has Been Launched </title>
-    <!--Style Starts-->
-    <link rel="icon" type="image/png" href="..img/IIITV_Logo_1x1_small.png">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="..css/style.css">
+ <!--Style starts-->
+ <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
+ <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+ <link rel="stylesheet" type="text/css" href="../css/scroll.css">
+ <link rel="stylesheet" type="text/css" href="../css/waves.min.css">
+ <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
